--- a/style.css
+++ b/style.css
@@ -607,625 +607,30 @@
     color: #fff;
 }
 
+/* COLOR OF ICONS IN >ABOUT MUSIC LINK FOUNDATION< */
+.material-icons {
+    color: #E4C81F;
+}
+
+/* END COLOR ICON */
 .donors {
     height: 600px;
 }
-
-.donors .donors_input {
-    background: #E4C81F none repeat scroll 0 0;
-    float: left;
-    height: 600px;
-    text-align: center;
-    width: 50%;
-}
-
-.donors .donors_input h2,
-.donors .donors_image h2 {
-    color: #181818;
-    font-family: "Open Sans", sans-serif;
-    font-size: 22px;
-    font-weight: 500;
-    margin: 75px 0 50px;
-    text-align: center;
-}
-
-.donors .donors_image h2 {
-    color: rgb(29, 29, 29);
-}
-
-.donors .donors_input p {
-    color: #242424;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    margin: 35px 0;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.donors .donors_input p input {
-    margin-left: 20px;
-    margin-right: 10px;
-}
-
-.donors .donors_input h5 {
-    margin: 65px auto 0;
-    max-width: 500px;
-
-}
-
-.donors .donors_input h5 input {
-    background: #E4C81F none repeat scroll 0 0;
-    border: 2px solid rgb(22, 22, 22);
-    border-radius: 10px;
-    color: rgb(22, 22, 22);
-    padding: 17px 20px;
-    width: 47%;
-}
-
-.donors .donors_input h5 input[type="text"] {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    color: rgb(22, 22, 22)
-    margin-right: 2%;
-}
-
-.donors .donors_input h5 input[type="email"] {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    color: rgb(22, 22, 22);
-    margin-left: 2%;
-    
-}
-
-.donors .donors_input input[type="submit"] {
-    background: rgb(22, 22, 22) none repeat scroll 0 0;
-    border: 2px solid #E4C81F;
-    border-radius: 10px;
-    color: #ffffff;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 500;
-    margin-top: 45px;
-    padding: 15px 40px;
-}
-
-.donors .donors_input h4 {
-    margin-top: 20px;
-    text-align: center;
-}
-
-
-
-.donors .donors_input h4 select {
-    width: 500px;
-    background: #E4C81F none repeat scroll 0 0;
-    border: none;
-    padding: 17px 20px;
-    border-radius: 10px;
-    border: 2px solid rgb(22, 22, 22);
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-}
-
-.donors .donors_image {
-    background: #eceff1 none repeat scroll 0 0;
-    float: left;
-    width: 50%;
-    height: 600px;
-}
-
-.donors .donors_image .item {
-    text-align: center;
-}
-
-.donors .donors_image .item img {
-    border-radius: 10px;
-    margin: 0 auto 30px;
-    width: 385px;
-    box-shadow: 0px 3px 10px 0px rgba(255, 255, 255, 0.15);
-}
-
-.donors .donors_image .item h3 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-}
-
-.donors .donors_image .item p {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    margin: 10px 0 75px;
-}
-
-.donors .donors_image .item p span {
-    color: #000000;
-}
-
-.donors .donors_image .owl-theme .owl-nav {
-    margin-top: 10px;
-    display: none;
-}
-
-.donors .donors_image .owl-theme .owl-dots .owl-dot.active span,
-.donors .donors_image .owl-theme .owl-dots .owl-dot:hover span {
-    background: #181818 none repeat scroll 0 0;
-    border: 1px solid #181818;
-}
-
-.donors .donors_image .owl-theme .owl-dots .owl-dot span {
-    border: 1px solid #E4C81F;
-    height: 12px;
-    width: 12px;
-}
-
-.volunteer_area .item {
-    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.15);
-}
-
-.volunteer_area .item img {
-    float: left;
-    width: 160px;
-}
-
-.volunteer_area .item .text {
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-    float: left;
-    width: 250px;
-    padding: 20px 30px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.volunteer_area .item .text h3 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 18px;
-    font-weight: 500;
-    margin: 0;
-}
-
-.volunteer_area .item .text h6 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-    margin: 10px 0 0;
-}
-
-.volunteer_area .item .text h5 i {
-    font-size: 18px;
-    color: #504b5f;
-    margin-right: 20px;
-}
-
-.volunteer_area .item .text p {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    margin: 10px 0 0;
-}
-
-.volunteer_area .owl-theme .owl-nav {
-    margin: 65px 0 110px;
-}
-
-.volunteer_area .owl-theme .owl-nav [class*="owl-"] {
-    background: transparent;
-    border: medium none;
-    border-radius: 3px;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 14px;
-    height: 50px;
-    margin: 8px;
-    padding: 0;
-}
-
-.volunteer_single {
-    margin-top: 70px;
-}
-
-.volunteer_area .owl-theme .owl-nav i {
-    background: #fff none repeat scroll 0 0;
-    border: 1px solid #E4C81F;
-    border-radius: 5px;
-    color: #E4C81F;
-    font-size: 25px;
-    height: 50px;
-    overflow: hidden;
-    padding: 10px 15px;
-    width: 50px;
-}
-
-.volunteer_area .owl-theme .owl-nav i:hover {
-    background: #E4C81F;
-    color: #fff;
-}
-
-.carosal_bottom {
-    background-image: url(img/carosal_bottom_bg.jpg);
-    background-size: 100% 100%;
-    height: 575px;
-}
-
-.carosal_bottom .item {
-    max-width: 750px;
-    margin: 0 auto;
-    text-align: center;
-    padding-top: 80px;
-}
-
-.carosal_bottom .item img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin: 0 auto;
-}
-
-.carosal_bottom .item p {
-    color: #fff;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    margin-top: 28px;
-}
-
-.carosal_bottom .item h5 {
-    margin-top: 21px;
-}
-
-.carosal_bottom .item h5 i {
-    color: #1dbb6b;
-    font-size: 60px;
-}
-
-.carosal_bottom .item h4 {
-    color: #fff;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    margin-top: 13px;
-    text-transform: uppercase;
-}
-
-.carosal_bottom .item h6 {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    color: #fff;
-}
-
-.carosal_bottom .owl-theme .owl-nav,
-.carosal_bottom .owl-theme .owl-dots {
-    display: none;
-}
-
-.letast_news .single_news {
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
-    margin-bottom: 130px;
-    margin-top: 70px;
-    border-radius: 10px;
-}
-
-.letast_news .single_news img {
-    width: 100%;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-}
-
-.letast_news .single_news .texts {
-    padding: 30px;
-}
-
-.letast_news .single_news .texts p.date a {
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #000;
-}
-
-.letast_news .single_news .texts h3 {
-    color: #000;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 27px;
-    margin: 0;
-}
-
-.letast_news .single_news .texts p.texts {
-    color: #000;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 20px;
-    margin-top: 15px;
-    padding: 0;
-}
-
-.letast_news .single_news .texts h3 a {
-    color: #000;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 20px;
-    text-decoration: none;
-}
-
-.letast_news .single_news:hover .texts h3 {
-    color: #30dd85;
-}
-
-.letast_news .single_news:hover .texts h3 a {
-    color: #30dd85;
-    text-decoration: underline;
-}
-
-.footer_carosal {
-    background: #f5f5f5 none repeat scroll 0 0;
-    height: 150px;
-    padding: 60px 0;
-    margin-top: 100px;
-}
-
-.footer_carosal .footer_carosal_icon .item img {
-    width: 150px;
-}
-
-.footer {
-    position: relative;
-    margin-top: 45px;
-    padding-top: 90px;
-    background: #20212B;
-}
-
-.footer .footer-contact,
-.footer .footer-link,
-.footer .footer-newsletter {
-    position: relative;
-    margin-bottom: 45px;
-    color: #ffffff;
-}
-
-.footer .footer-contact h2,
-.footer .footer-link h2,
-.footer .footer-newsletter h2 {
-    margin-bottom: 30px;
-    font-size: 22px;
-    font-weight: 700;
-    color: #FDBE33;
-}
-
-.footer .footer-link a {
-    display: block;
-    margin-bottom: 10px;
-    color: #ffffff;
-    transition: .3s;
-}
-
-.footer .footer-link a::before {
-    position: relative;
-    content: "\f105";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    margin-right: 10px;
-}
-
-.footer .footer-link a:hover {
-    color: #FDBE33;
-    letter-spacing: 1px;
-}
-
-.footer .footer-contact p i {
-    width: 25px;
-}
-
-.footer .footer-social {
-    position: relative;
-    margin-top: 20px;
-}
-
-.footer .footer-social a {
-    width: 40px;
-    height: 40px;
-    padding: 6px 0;
-}
-
-.footer .footer-social a {
-    margin-top: 5px;
-}
-
-.footer .footer-newsletter form {
-    position: relative;
-    width: 100%;
-}
-
-.footer .footer-newsletter input {
-    margin-bottom: 15px;
-    height: 60px;
-    border: none;
-    border-radius: 0;
-}
-
-.footer .footer-newsletter label {
-    margin-top: 5px;
-    color: #777777;
-    font-size: 14px;
-    letter-spacing: 1px;
-}
-
-.footer .footer-newsletter .btn.btn-custom {
-    width: 100%;
-    padding: 15px 0;
-}
-
-.footer .copyright {
-    padding: 0 30px;
-}
-
-.footer .copyright .row {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    border-top: 1px solid rgba(256, 256, 256, .1);
-}
-
-.footer .copyright p {
-    margin: 0;
-    color: #999999;
-}
-
-.footer .copyright .col-md-6:last-child p {
-    text-align: right;
-}
-
-.footer .copyright p a {
-    color: #ffffff;
-}
-
-.footer .copyright p a:hover {
-    color: #FDBE33;
-}
-
-@media (max-width: 767.98px) {
-    .footer .copyright p,
-    .footer .copyright .col-md-6:last-child p {
-        margin: 5px 0;
-        text-align: center;
-    }
-}
-
-.block-wrapper {
-    background-image: url(img/count.jpg);
-    background-size: 100% 100%;
-}
-
-.block-wrapper {
-    padding: 60px 0;
-    margin-top: 130px;
-}
-
-.block-wrapper .block {
-    text-align: center;
-    padding: 25px 0;
-}
-
-.block-wrapper .block i {
-    font-size: 60px;
-    color: #fff;
-}
-
-.block-wrapper .block p.counter-wrapper span {
-    color: #fff;
-    font-family: "Open Sans", sans-serif;
-    font-size: 35px;
-    font-weight: 700;
-}
-
-.block-wrapper .block p.text-block {
-    color: #fff;
-    font-family: "Open Sans", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-}
-/* Line for the donations numbers strip (donors,students*/
-.block-wrapper .for-border {
-    border-left: 1px solid  #ffffff;
-}
-
-.block-wrapper .for-border:first-child {
-    border-left: 0px solid #fff
-}
-
-.clear {
-    clear: both;
-}
-.footer_carosal_icon .owl-nav{
-    display: none;
-}
-
-/* gallery img */
-
-
-.container.gallery-container {
-    background-color: #fff;
-    color: #35373a;
-    min-height: 100vh;
-    border-radius: 20px;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
-}
-
-.gallery-container h1 {
-    text-align: center;
-    margin-top: 70px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-}
-
-.gallery-container p.page-description {
-    text-align: center;
-    max-width: 800px;
-    margin: 25px auto;
-    color: #888;
-    font-size: 18px;
-}
-
-.tz-gallery {
-    padding: 40px;
-}
-
-.tz-gallery .lightbox img {
-    width: 100%;
-    margin-bottom: 30px;
-    transition: 0.2s ease-in-out;
-    box-shadow: 0 2px 3px rgba(0,0,0,0.2);
-}
-
-
-.tz-gallery .lightbox img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 8px 15px rgba(0,0,0,0.3);
-}
-
-.tz-gallery img {
-    border-radius: 4px;
-}
-
-.baguetteBox-button {
-    background-color: transparent !important;
-}
-
-
-@media(max-width: 768px) {
-    body {
-        padding: 0;
-    }
-
-    .container.gallery-container {
+@ -1211,7 +1217,7 @@
         border-radius: 0;
     }
 }
 
+/*SOCIAL MEDIA */
 
 .btn.btn-custom {
     padding: 12px 20px;
-    text-align: center; 
-   font-size: 16px;
-    font-weight: 500;
-    color: #ffffff;
-    border-radius: 0;
-    border: 2px solid #FDBE33;
-    box-shadow: inset 0 0 0 0 #FDBE33;
-    transition: ease-out 0.3s;
-    -webkit-transition: ease-out 0.3s;
+@ -1227,145 +1233,148 @@
     -moz-transition: ease-out 0.3s;
 }
+
+
+
 
 .btn.btn-custom:hover {
     color: #20212B;
